# vno-cli

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  vno-cli.files  vno-cli.includes
inc/: branch.h  checkout.h  clone.h  commit.h  credentials.h  diff.h  init.h  log.h  merge.h  paths.h  rest.h  status.h  utils.h
scripts/: gen.pl
src/: branch.cpp  checkout.cpp  clone.cpp  commit.cpp  credentials.cpp  diff.cpp  init.cpp  log.cpp  main.cpp  merge.cpp  rest.cpp  status.cpp  utils.cpp
src/base64/: cdecode.c  cencode.c
